Viewport update problem when switching between view layers #75736

Closed
opened 2020-04-14 21:10:18 +02:00 by Steffen Dünner · 12 comments

System Information
Operating system: Linux-5.3.18-050318-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64.00

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-14 18:52, hash: bb9a282c7e and current buildbot
Worked: Official 2.82

Short description of error
Switching between view layers sometimes doesn't update immediately but needs another click or mouse movement to update.

Exact steps for others to reproduce the error

  • Open the attached blend file. It contains a collection called "Collection" which the camera lives in. And 3 collections called "Layer_1" to "Layer_3" each containing a single cube.
    Viewlayer_Bug_01.blend
  • You should see 3 cubes. The current view layer is "View Layer" containing all collections.
  • Switch to view layer "Layer_1": Only the cube in collection "Layer_1" is visible
  • Switch to view layer "Layer_2": The cube inside collection "Layer_2" is visible
  • Switch to view layer "Layer_3": The cube inside collection "Layer_3" is visible
  • Switch back to View Layer "View Layer": Now only the cube inside "Layer_3" is visible in the 3D viewport although all collections should be visible.
  • Click inside the Outliner or somewhere in the 3D viewport or move the camera and all of a sudden the viewport updates and all 3 cubes are visible.
  • Looks like something needs a tiny "push" to finally show the missing collections.
**System Information** Operating system: Linux-5.3.18-050318-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64.00 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-14 18:52, hash: `bb9a282c7e` and current buildbot Worked: Official 2.82 **Short description of error** Switching between view layers sometimes doesn't update immediately but needs another click or mouse movement to update. **Exact steps for others to reproduce the error** - Open the attached blend file. It contains a collection called "Collection" which the camera lives in. And 3 collections called "Layer_1" to "Layer_3" each containing a single cube. [Viewlayer_Bug_01.blend](https://archive.blender.org/developer/F8472283/Viewlayer_Bug_01.blend) - You should see 3 cubes. The current view layer is "View Layer" containing all collections. - Switch to view layer "Layer_1": Only the cube in collection "Layer_1" is visible - Switch to view layer "Layer_2": The cube inside collection "Layer_2" is visible - Switch to view layer "Layer_3": The cube inside collection "Layer_3" is visible - Switch back to View Layer "View Layer": Now only the cube inside "Layer_3" is visible in the 3D viewport although all collections should be visible. - Click inside the Outliner or somewhere in the 3D viewport or move the camera and all of a sudden the viewport updates and all 3 cubes are visible. - Looks like something needs a tiny "push" to finally show the missing collections.

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, checking...

Can confirm, checking...
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Caused by c476c36e40

CC @fclem

Caused by c476c36e40 CC @fclem

Added subscriber: @Williammbsb

Added subscriber: @Williammbsb

when I try to open the blender, load the command, open the blender and automatically close it, I tried to install it several times but it’s just the same, I need help

when I try to open the blender, load the command, open the blender and automatically close it, I tried to install it several times but it’s just the same, I need help
Member

@Williammbsb file a new report using Help menu > report a bug or use places for support as given at https://www.blender.org/community/

@Williammbsb file a new report using Help menu > report a bug or use places for support as given at https://www.blender.org/community/
Clément Foucault self-assigned this 2020-04-27 16:26:09 +02:00

This issue was referenced by 133bf05b18

This issue was referenced by 133bf05b184bfeed3002be28c29199b5716b8f1e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75736
No description provided.